--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,6 +38,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      const customTitlebar = require('custom-electron-titlebar');
+
+      new customTitlebar.Titlebar({
+        overflow: 'hidden',
+        maximizable: false,
+        backgroundColor: customTitlebar.Color.fromHex('#444')
+      });
+    </script>
 </body>
 
 </html>
